--- a/example/index.css
+++ b/example/index.css
@@ -1,4 +1,4 @@
-@import url(https://esm.sh/gh/phothinmg/burma/css/burmafonts.css);
+@import url('https://cdn.jsdelivr.net/npm/burmesefont@1.1.0/src/index.css');
 :root,::backdrop 
 {--standard-border-radius: 5px;
     --bg: #ffffff;
@@ -49,7 +49,7 @@ body {
     background-color: var(--bg);
     display: grid;grid-template-columns: 1fr min(45rem, 90%) 1fr;
     margin: 0;
-    font-family: burma;
+    font-family: umoe !important;
     box-sizing: border-box;
 }
 body > * {grid-column: 2;}
